syntax = "proto3";

package proto;

option go_package = "sgsg/proto";

message Note {
    string id = 1;
    string created = 2;
    string updated = 3;
    optional string deleted = 4;

    string user_id = 5;
    string title = 6;
    string content = 7;
}
